--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,13 @@
         android:theme="@style/Theme.Project1"
         tools:targetApi="31">
         <activity
-            android:name=".CarDetailActivity"
+            android:name=".controller.CarDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".CarListActivity"
+            android:name=".controller.CarListActivity"
             android:exported="true"></activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".controller.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,7 +29,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ActivityLogin"
+            android:name=".controller.ActivityLogin"
             android:exported="true" />
     </application>
 
