--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,14 @@
         android:theme="@style/Theme.Project1"
         tools:targetApi="31">
         <activity
+            android:name=".controller.CheckoutActivity"
+            android:exported="false" />
+        <activity
             android:name=".controller.CarDetailActivity"
             android:exported="false" />
         <activity
             android:name=".controller.CarListActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".controller.MainActivity"
             android:exported="true">
