added cover page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,21 +23,21 @@
             android:name=".controller.CarListActivity"
             android:exported="true" />
         <activity
-            android:name=".controller.RegisterActivity"
-            android:exported="false" />
-        <activity
-            android:name=".controller.MainActivity"
+            android:name=".controller.CoverActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
+            android:name=".controller.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".controller.MainActivity"
+            android:exported="true" />
+        <activity
             android:name=".controller.ActivityLogin"
             android:exported="true" />
     </application>
-
 </manifest>
